syntax = "proto3";

package messaging;

option go_package = "github.com/kingbob2015/gomessaging/proto/messagingpb";

message RegisterAsClientRequest {
    string display_name = 1;
}

message RegisterAsClientResponse {
    string user_id = 1;
}

message OpenReceiveChannelRequest {
    string user_id = 1;
}

message OpenReceiveChannelResponse{
    string sender_display_name = 1;
    string message = 2;
}

message GetClientListRequest {

}

message GetClientListResponse {
    repeated string client_list = 1;
}

message SendMessageRequest {
    string user_id = 1;
    string receiver_display_name = 2;
    string message = 3;
}

message SendMessageResponse {
    
}

service MessagingService {
    rpc RegisterAsClient(RegisterAsClientRequest) returns (RegisterAsClientResponse){};
    rpc OpenReceiveChannel(OpenReceiveChannelRequest) returns (stream OpenReceiveChannelResponse){};
    rpc GetClientList(GetClientListRequest) returns (GetClientListResponse){};
    rpc SendMessage(SendMessageRequest) returns (SendMessageResponse){};
}